@@ -19,7 +19,7 @@
 
 
 Name:    libopendbx1
-Version:    1.5.0pre
+Version:    1.5.0
 Release:    1%{?dist}
 Summary:    Unified database layer with a clean and lightweight interface
 Summary(de.UTF-8):    Bibliothek zum Zugriff auf Datenbanken über eine einheitliche Schnittstelle
